[project]
name = "GitUAP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Hazarddrips", email = "haidarzj123@gmail.com"},
]
dependencies = ["streamlit>=1.12.0", "tensorflow>=2.18.0", "pillow>=11.0.0", "numpy>=2.0.2"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
